syntax = "proto3";

package product;

service ProductService {
  rpc GetAllProducts (Empty) returns (GetAllProductsResponse);
  rpc GetProductBySlug (GetProductBySlugRequest) returns (ProductDetail);
  rpc GetProductsBySkuList (GetProductsRequest) returns (GetProductsResponse);
}

message Empty {}

message GetAllProductsResponse {
  repeated ProductDetail products = 1;
}

message GetProductBySlugRequest {
  string slug = 1;
}

message GetProductsRequest {
  repeated ProductSkuInput items = 1;
}

message ProductSkuInput {
  int32 productId = 1;
  string skuNo = 2;
}

message ProductDetail {
  int32 productId = 1;
  string skuNo = 2;
  string productName = 3;
  float sku_price = 4;
  int32 sku_stock = 5;
  string thumb = 6;
  string slug = 7;
}

message GetProductsResponse {
  repeated ProductDetail products = 1;
}